# jack

./: .gitignore  .swiftlint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPERIMENTAL.md  GAMELIST.md  README.md  TODO.md  crowdin.yml  dmc5config.ini  jack.sln
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: Release.yml
Jack/: AppDelegate.swift  Info.plist  Jack.entitlements  Localizable.xcstrings
Jack.xcodeproj/: project.pbxproj
Jack.xcodeproj/xcshareddata/: IDETemplateMacros.plist
Jack.xcodeproj/xcshareddata/xcschemes/: Jack.xcscheme  JackCmd.xcscheme  JackThumbnail.xcscheme
Jack/Assets.xcassets/JackLogo.imageset/: Contents.json
Jack/Extensions/: Animation+Extensions.swift  Bottle+Extensions.swift
Jack/Utils/: Constants.swift  JackCmd.swift  ProgramShortcut.swift  Winetricks.swift
Jack/View Models/: BottleVM.swift
Jack/Views/: ContentView.swift  FileOpenView.swift  JackApp.swift  SparkleView.swift
Jack/Views/Bottle/: BottleCreationView.swift  BottleListEntry.swift  BottleView.swift  ConfigView.swift  RunningProcessesView.swift  WinetricksView.swift
Jack/Views/Common/: ActionView.swift  (+2 more)
JackCloudSync/: JackCloudSync  jacksteam.py  main.c  steamcloud.py  test_steam.py
JackCmd/: Main.swift
JackGPU/: CMakeLists.txt  README.md
JackGPU/driver/: command_buffer.c  command_buffer.h  device.c  device.h  dispatch.c  dispatch.h  icd.c  instance.c  instance.h  jackgpu.def  jackgpu.h  memory.c  memory.h  physical_device.c  physical_device.h  queue.c  queue.h  sync.c  sync.h
JackGPU/kmd/: CMakeLists.txt  Makefile  escape.c  jackgpu_kmd.c  jackgpu_kmd.h  jackgpu_kmd.inf  virtqueue.c
JackGPU/manifest/: jackgpu_x64.json
JackGPU/transport/: d3dkmt.c  d3dkmt.h  ring.c  ring.h  virtgpu.c  virtgpu.h
JackGPU/venus/: decoder.c  decoder.h  encoder.c  encoder.h
JackGPU/vm/: JackGPU_STEPS.md  autounattend.xml  build-image.sh  run.sh  setup.sh
JackKit/: Package.swift
JackSteamBridge/JackSteamBridge/: JackSteamBridge.csproj  Program.cs
JackThumbnail/: ThumbnailProvider.swift
(+67 files in other folders)
